Changes to 1.2.7 +nb
[CHANGES]
[FIXES]
*battle.php -> isset() needs to check for index values not existing
*prefs.php -> mail address defaulting to 127.0.0.1 in email change email (not nice, not critical), changed
*lib/mail/case_read.php, lib/petitions/petition_default.php -> instead of GET (report to admin), POST works better with long mails and won't break
*modules/* -> modules updated to current
[REMOVES]

[NEW]
*modules/charrestore.hp -> added char restorer

Changes to 1.2.6 +nb
[CHANGES]
*lib/buffs.php -> added strip_companion($name) which removes one or more companions safely
*lib/phpmailer -> removed, now new phpmailer in ext
*lib/sendmail.php -> moved the phpmailer from lib/phpmailer to ext to composer.json in an effort to organize addons better
*lib/systemmail.php -> minor syntax fixes and autoload implementation of the ext-Folder
*newday.php -> added new setting "debtfloor" which will prevent people to get infinite minus gold in bank (will break database fields else!)
[FIXES]
*lib/all_tables.php and several --> 0000-00-00 00:00:00 is not valid DATETIME since MySQL 5.7 anymore. Hence, new constants DATETIME_DATEMIN and _DATEMAX have been introduced in lib/constants.php. Default is set to 1970-01-01 ... and 2159-01-01 ... - max could be 9999-12-31, but if I get older than 160 years, I'll fix that for you - also set a few size values from int to bigint
*lib/events.php -> replaced $PHPSELF with $_SERVER['PHP_SELF']
*lib/fightnav.php -> replaced $PHPSELF with $_SERVER['PHP_SELF']
*lib/modules.php -> replaced $PHPSELF with $_SERVER['PHP_SELF']
*lib/pageparts.php -> companion array was counted before made sure it was an array
*lib/show_backtrace.php -> each() deprecated and now foreach()
*lib/translator.php -> $PHPSELF changes and some each() deprecation fixes
*motd.php --> critical SQL injection attack fix. Month in httppost was not escaped and directly patched into an SQL query!